Product listing - fix spacing in FF

--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -352,9 +352,12 @@
 
     .product-item {
         width: 31.33%;
-        margin: 0 3% 3% 0;
+        margin: 0 3% 0 0;
         &:nth-child(3n) {
             margin-right: 0;
+        }
+        .product-item-article {
+            margin-bottom: 3%;
         }
     }
 }
@@ -368,9 +371,12 @@
 
     .product-item {
         width: 48%;
-        margin: 0 4% 4% 0;
+        margin: 0 4% 0 0;
         &:nth-child(2n) {
-        margin-right: 0;
+            margin-right: 0;
+        }
+        .product-item-article {
+            margin-bottom: 4%;
         }
     }
 }
